refactor(auth): update filter to read cookies and configure CORS for credentials